2.0.4
- Add back missing "Swap human racial with trinket" setting for the MoP version where it fints.

2.0.3
- Interrupted castbars no longer instantly hide but instead show who interrupted and fades the castbar out slowly.
- Fix some hide castbar events
- Fix two lua errors due to typos
- Don't show cooldown spiral on trinket if no trinket texture.

2.0.2
- Add new aura stacks indicator in bottom left corner of Class/Aura Icon.
- Add new text settings that lets you move and resize name, health, etc.
- Fix stealthed units transparency and tweak the amount
- Fix Class Icon Swipe going the wrong way by default after introducing new settings for it.
- Fix frames being bugged after reload while in an arena.
- Fix missing library for SharedMedia causing addon not to load for some people.

2.0.1
- Add /sarena test1-5 command.
- Fix Black DR Border not working during test mode for Pixelated layout.
- Change wording related to other sArena's. Reminder that this version is made based on the original one by Stako with their blessing: "Others are free to submit updates or upload their own versions".

2.0.0
- This sArena version has now also launched as a Retail version! Everything below is for both versions (but MoP needs some more data for the non-duration auras)
- New Retail layout
- Add Shields & Overshields to healthbars
- New Texture & Font settings (And removed old classic bars & prototype setting)
- New Dark Mode setting (also follows BetterBlizzFrames if you have that)
- New Modern Castbars look setting.
- New Bright DR Border setting.
- New setting that lets you texture swap healers specifically, optionally only when class stacking.
- New "Replace Healer Icon" setting. Turns Healer Icon into Healer Cross.
- New "Per Class" Static DR Icon setting. Aka show Blind icon on Rogue and Fear icon on Priest etc.
- New swipe animation settings: Disable & Reverse, for DR, Class Icon and Trinket/Racial.
- New Class Color Names setting